#1429: add utility for bottom spacing fix

--- a/src/styles/core/_utilities.scss
+++ b/src/styles/core/_utilities.scss
@@ -452,7 +452,7 @@ $spacing-g: (
 // Uses padding bottom
 // E.g. .spacing-b, %spacing-b, .spacing-2-b, %spacing-3-b, etc.
 
-@each $name, $value in $spacing {
+@each $name, $value in $spacing-g {
   .#{$name}-b, %#{$name}-b {
     padding-bottom: $value;
   }
